# Tauri-Vue-Template

./: .env.example  .eslintrc-auto-import.json  .gitignore  .prettierrc.json  CHANGELOG.md  CHANGES.md  CODE_SIGNING.md  CONTRIBUTING.md  CUSTOM_ICONS_GUIDE.md  ICONS.md  OPTIMIZATION_SUMMARY.md  README.en.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_PROCESS.md  TEMPLATE_CONVERSION_SUMMARY.md  auto-imports.d.js  bump-version.cjs  components.d.js  eslint.config.cjs  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: lint.yml  release.yml  test-build.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  system.rs
src-tauri/src/commands/: file.rs  mod.rs  system.rs
src/api/: index.js
src/assets/iconfont/: iconfont.css  iconfont.js  iconfont.json
src/assets/styles/: dark.css  global.css
src/components/: ConfigTab.vue  ExamplesTab.vue  PopupTab.vue  ToolsTab.vue
src/components/common/: Modal.vue  ThemeToggle.vue  Toast.vue  index.js
src/components/features/: CustomIconDemo.vue
src/components/layout/: AppLayout.vue  MainFooter.vue  Sidebar.vue  Titlebar.vue
src/composables/: index.js  useModal.js  useTauriCommand.js  useTheme.js  useToast.js
src/constants/: app.js  index.js  routes.js  theme.js
src/router/: index.js
src/stores/: app.js  index.js  settings.js
src/utils/: errorHandler.js  logger.js  validation.js
src/views/: ConfigView.vue  ExamplesView.vue  HomeView.vue  PopupView.vue  ToolsView.vue
